applications/herald/herald.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: herald
  namespace: herald
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: herald
  template:
    metadata:
      labels:
        app: herald
    spec:
      containers:
        - name: herald
          image: ghcr.io/jspaulsen/herald:sha-cac026acc92d3e7cb86923e531c275dc5db7294b
          ports:
            - containerPort: 3002
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: herald
  namespace: herald
spec:
  selector:
    app: herald
  ports:
    - port: 80
      targetPort: 3002
