applications/herald/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: herald-route
  namespace: herald
spec:
  parentRefs:
    - name: cloudflare-tunnel
      namespace: cloudflare-gateway
  hostnames:
    - herald.yeebs.dev
  rules:
    - backendRefs:
        - name: herald
          port: 80
